// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component and the \`label\` prop is \`label\` as render should match the snapshot 1`] = `
<label>
  <div
    class="iradio indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="radio"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <span>
    label
  </span>
</label>
`;

exports[`Radio component and the children are passed and the \`labelTag\` prop is \`div\` as render should match the snapshot 1`] = `
<label>
  <div
    class="iradio indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="radio"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <div>
    <span>
      label
    </span>
  </div>
</label>
`;

exports[`Radio component as mount should match the default props snapshot 1`] = `
Object {
  "activeClass": null,
  "activeClassName": "active",
  "aria": false,
  "checked": false,
  "checkedClass": null,
  "checkedClassName": "checked",
  "children": null,
  "className": null,
  "defaultChecked": false,
  "disabled": false,
  "disabledClass": null,
  "disabledClassName": "disabled",
  "focusClass": null,
  "focusClassName": "focus",
  "hoverClass": null,
  "hoverClassName": "hover",
  "id": null,
  "increaseArea": "",
  "indeterminate": true,
  "indeterminateClass": null,
  "indeterminateClassName": "indeterminate",
  "inheritClass": null,
  "inheritClassName": false,
  "inheritID": false,
  "insert": null,
  "label": null,
  "labelClassName": null,
  "labelHover": true,
  "labelHoverClass": "hover",
  "labelTag": "span",
  "labelTagClassName": null,
  "name": null,
  "onBlur": null,
  "onChange": null,
  "onFocus": null,
  "onMouseDown": null,
  "onMouseLeave": null,
  "onMouseUp": null,
  "onTouchEnd": null,
  "onTouchStart": null,
  "radioClass": null,
  "radioClassName": "iradio",
  "type": null,
  "value": "",
}
`;

exports[`Radio component as mount should match the default state snapshot 1`] = `
Object {
  "checked": false,
  "hovered": false,
  "isMobile": false,
  "prevPropChecked": false,
}
`;

exports[`Radio component as render should match the snapshot 1`] = `
<div
  class="iradio indeterminate"
>
  <input
    style="opacity:0;position:absolute"
    type="radio"
    value=""
  />
  <ins
    class="iCheck-helper"
    role="presentation"
    style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
  />
</div>
`;
